Added google sso

--- a/oauth2-spring-pluralsight/client_app_facebook_sso/src/main/resources/templates/fragments/header.html
+++ b/oauth2-spring-pluralsight/client_app_facebook_sso/src/main/resources/templates/fragments/header.html
@@ -27,7 +27,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="nav-item">
-						User: <span sec:authentication="principal.name" class="pull-right">Bob</span>
+						User: <span sec:authentication="principal.firstAndLastName" class="pull-right">Bob</span>
 					</li>
 				</ul>
 					
