--- a/oauth2-spring-pluralsight/client_app_facebook_sso/src/main/resources/templates/login.html
+++ b/oauth2-spring-pluralsight/client_app_facebook_sso/src/main/resources/templates/login.html
@@ -38,6 +38,7 @@
                     </label>
                     <br>
                     <br>
+                    <a class="btn btn-primary" href="/oauth2/authorization/google">Login with Google</a><br><br>
                     <a class="btn btn-primary" href="/oauth2/authorization/facebook">Login with Facebook</a>
                 </form>
             </div>
